# math

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
c/: .gitignore  CMakeLists.txt  README.md  algebra.h  compile_commands.json  log.h  math.c  memory.h
c/algebra/: CMakeLists.txt  echelon.h  memory.h  operators.h
c/log/: CMakeLists.txt  file.c  file.h  levels.c  levels.h
c/src/algebra/: memory.h
c/src/log/: file.h  levels.c
c/tests/algebra/module/: CMakeLists.txt
c/tests/algebra/unit/: CMakeLists.txt
c/tests/include/: utilities.h
c/tests/log/unit/: CMakeLists.txt
cpp/: CMakeLists.txt  main.cpp
cpp/src/: matrix.hpp  memory.hpp  operators.hpp
cpp/src/algebra/: CMakeLists.txt  matrix.cpp  matrix.hpp  memory.hpp  operators.cpp  operators.hpp
cpp/src/log/: CMakeLists.txt  levels.cpp  levels.hpp
cpp/tests/: CMakeLists.txt  matrix.cpp  memory.cpp  operators.cpp
cpp/tests/algebra/: CMakeLists.txt  matrix.cpp  memory.cpp  operators.cpp
cpp/tests/log/: CMakeLists.txt  levels.cpp
src/algebra/: echelon.h  operators.h
src/log/: log.h
tests/: CMakeLists.txt  algebra.c  log.c  memory.c  utilities.h
tests/algebra/: CMakeLists.txt  echelon.c  memory.c  operators.c
tests/algebra/module/: CMakeLists.txt  echelon.c
tests/algebra/unit/: memory.c  operators.c
tests/log/: CMakeLists.txt  file.c  levels.c  log.c  static.c
tests/log/module/: CMakeLists.txt  log.c
tests/log/unit/: CMakeLists.txt  file.c  levels.c
